# zaitan

./: .gitignore  CMakeLists.txt  README.md  debug.sh
App/: AppDelegate.mm  Functions.mm  Info.plist  main.mm
Input/: Hotkeys.mm
Platform/: DebugOverlay.mm  FadeOverlay.mm  WindowController.mm
config/: Config.hpp  Config.mm
src/: Desktop.cpp  Desktop.hpp  Pane.hpp  WMRect.hpp  rect.hpp  window.hpp
